# adaptive-compute-rewrite

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  format.sh  pyproject.toml  requirements.txt
.github/workflows/: cpu_ci.yml
configs/: nemo_simpo_32b.yaml  nemo_simpo_7b_test.yaml
examples/: evaluate.ipynb  scoring.ipynb
recipes/sky-t1-7b/: README.md
recipes/sky-t1-flash/: README.md
recipes/sky-t1-preview/: README.md  postprocess.py  preprocess.py  prompts.py  recipe.py
scripts/: convert_data_to_nemo.py  convert_format.py  convert_to_data.py  download_model.py  response_rewrite.py
skythought/evals/: README.md  base_instruct_evals.md  cli.py  inference_and_check.py
skythought/evals/common/: entities.py
skythought/evals/models/: base.py
skythought/evals/ray_configs/: ray_config.yaml
skythought/evals/scoring/: __init__.py  base.py
skythought/evals/tasks/: __init__.py  base.py
skythought/evals/util/: cli_util.py  metrics.py  response.py
skythought/skythought-rl/: README.md  requirements.txt
skythought/skythought-rl/data/: data_prepare_mini.py  data_prepare_step2.py  data_prepare_step4.py  data_prepare_zero.py
skythought/skythought-rl/verl/: protocol.py
skythought/skythought_evals/: README.md  cli.py  combine_data.py  convert_format.py  convert_to_data.py  eval.py  inference_and_check.py  label_math_difficulty.py  requirements.txt  response_rewrite.py  upload_hub.py
skythought/skythought_evals/batch/: tokenizer.py
skythought/test-time-scaling/: README.md  codecontest_evaluate_multiprocess.py  evaluate_multiprocess.py  live_code_bench_execute.py  live_code_bench_program.py  util.py
skythought/tools/: README.md  base_instruct_evals.md  eval.py  inference_and_check.py  response_rewrite.py
skythought/train/: README.md
slurm/: 00_eval_qwen2_7b_math500_base.sh  00_eval_qwen2_7b_math500_simpo.sh  00_generate_and_score.sh  06_eval_math500_base.sh  06_eval_math500_simpo.sh  submit_qwen2_7b_simpo.sh  train_simpo_4node.sh  train_simpo_devel.sh  train_simpo_lora_1node.sh  train_simpo_lora_1node_7b.sh  train_simpo_lora_4node.sh  train_simpo_nemo_1node_test.sh  train_simpo_nemo_4node.sh
tests/evals/: test_cli.py
(+278 files in other folders)
